# ampscout

./: .env.example  .gitignore  README.md  index.html  main.py  models.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  vercel-python.json  vercel.json  vite.config.ts  webpack.config.js
public/: 404.html
services/: detroit_data.py  scoring.py
src/: App.tsx  main.tsx  theme.ts
src/api/: stats.ts
src/components/: Map.tsx  Navbar.tsx
src/pages/: Dashboard.tsx  DocumentGenerator.tsx  HomePage.tsx  PropertyDatabase.tsx  ROICalculator.tsx  SiteAnalysis.tsx
static/css/: style.css
static/js/: main.js
templates/: index.html
