[build-system]
requires = ["setuptools>=68.2.2", "wheel>=0.41.2"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "ampscout"
version = "0.1.0"
description = "EV Charging Site Selection Application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9.18"
fastapi = "0.104.1"
uvicorn = "0.24.0"
jinja2 = "3.1.2"
python-multipart = "0.0.6"
pydantic = "2.4.2"
python-dotenv = "1.0.0"
aiofiles = "23.2.1"
starlette = "0.27.0"
typing-extensions = "4.8.0"
click = "8.1.8"
h11 = "0.14.0"
MarkupSafe = "3.0.2"
requests = "2.31.0"
geopy = "2.4.0"
pandas = "2.0.3"
numpy = "1.24.3" 